--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
                         data-no-retina>
 
                     <div class="tp-caption tp-resizeme" data-x="right" data-hoffset="0" data-y="center"
-                        data-voffset="-4" data-transform_idle="o:1;"
+                        data-voffset="-25" data-transform_idle="o:1;"
                         data-transform_in="x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0.01;s:7000;e:Power3.easeOut;"
                         data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"
                         data-mask_in="x:[100%];y:0;s:inherit;e:inherit;" data-splitin="none" data-splitout="none"
-                        data-start="500">
+                        data-start="1000">
                         <div class="slide-content-box">
                             <!-- <h3>SGRT</h3> -->
                             <h1>Testing Facilities</h1>
-                            <p>SGRT facility has provided valuable inputs for the formulaƟon of
+                            <p>SGRT facility has provided valuable inputs for the formulation of
                                 new standards for processed glass by the Bureau of Indian Standards.</p>
                             <div class="button">
                                 <a class="thm-btn yellow-bg" href="testing-facilities.html">Read More</a>
@@ -154,16 +154,16 @@
 
                     <div class="tp-caption tp-resizeme" data-x="center" data-hoffset="0" data-y="center"
                         data-voffset="-129" data-transform_idle="o:1;"
-                        data-transform_in="x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0.01;s:3000;e:Power3.easeOut;"
+                        data-transform_in="x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0.01;s:7000;e:Power3.easeOut;"
                         data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"
                         data-mask_in="x:[100%];y:0;s:inherit;e:inherit;" data-splitin="none" data-splitout="none"
                         data-start="500">
                     </div>
                     <div class="tp-caption tp-resizeme" data-x="center" data-hoffset="0" data-y="center"
                         data-voffset="-130" data-transform_idle="o:1;"
-                        data-transform_in="x:[175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0.01;s:3000;e:Power3.easeOut;"
+                        data-transform_in="x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0.01;s:7000;e:Power3.easeOut;"
                         data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"
-                        data-mask_in="x:[-100%];y:0;s:inherit;e:inherit;" data-splitin="none" data-splitout="none"
+                        data-mask_in="x:[100%];y:0;s:inherit;e:inherit;" data-splitin="none" data-splitout="none"
                         data-responsive_offset="on" data-start="1500">
                         <div class="slide-content-box">
                             <h1>Training, Industrial Visit and Awareness</h1>
@@ -171,9 +171,10 @@
                     </div>
                     <div class="tp-caption tp-resizeme" data-x="center" data-hoffset="0" data-y="center"
                         data-voffset="-50" data-transform_idle="o:1;"
-                        data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;"
-                        data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;" data-splitin="none"
-                        data-splitout="none" data-responsive_offset="on" data-start="2300">
+                        data-transform_in="x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0.01;s:7000;e:Power3.easeOut;"
+                        data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"
+                        data-mask_in="x:[100%];y:0;s:inherit;e:inherit;"
+                        data-splitin="none"  data-splitout="none" data-responsive_offset="on" data-start="2300">
                         <div class="slide-content-box last-slide">
                             <div class="slide-content-box last-slide">
                                 <p class="text-center" style="color: #0e112c; font-weight: 600">SGRT at IIT Madras aims to provide vast
@@ -185,7 +186,8 @@
                     <div class="tp-caption tp-resizeme" data-x="center" data-hoffset="0" data-y="center"
                         data-voffset="65" data-transform_idle="o:1;"
                         data-transform_in="x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0.01;s:7000;e:Power3.easeOut;"
-                        data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;" data-splitin="none"
+                        data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"
+                        data-mask_in="x:[100%];y:0;s:inherit;e:inherit;" data-splitin="none"
                         data-splitout="none" data-responsive_offset="on" data-start="3000">
                         <div class="slide-content-box last-slide">
                             <div class="button">
@@ -202,7 +204,7 @@
 
                     <div class="tp-caption  tp-resizeme" data-x="left" data-hoffset="0" data-y="top" data-voffset="125"
                         data-transform_idle="o:1;"
-                        data-transform_in="x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0.01;s:3000;e:Power3.easeOut;"
+                        data-transform_in="x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0.01;s:7000;e:Power3.easeOut;"
                         data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"
                         data-mask_in="x:[100%];y:0;s:inherit;e:inherit;" data-splitin="none" data-splitout="none"
                         data-start="700">
@@ -212,13 +214,14 @@
                             <p style="width: 50%;">SGRT’s goal is to encourage and build
                                 research and study on Glass, Profiles, Facade, and Fenestration and their
                                 associated materials <br> and also focus on the quality and performance of
-                                materials, their applicaƟon, and funcƟonal aspects in buildings.</p>
+                                materials, their application, and functional aspects in buildings.</p>
                         </div>
                     </div>
                     <div class="tp-caption tp-resizeme" data-x="left" data-hoffset="0" data-y="top" data-voffset="280"
                         data-transform_idle="o:1;"
                         data-transform_in="x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0.01;s:7000;e:Power3.easeOut;"
-                        data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;" data-splitin="none"
+                        data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"
+                        data-mask_in="x:[100%];y:0;s:inherit;e:inherit;" data-splitin="none"
                         data-splitout="none" data-responsive_offset="on" data-start="2300">
                         <div class="slide-content-box">
                             <div class="button">
