Minor update in activities and event page

--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
                         <div class="slide-content-box">
                             <!-- <h3>SGRT</h3> -->
                             <h1>Testing Facilities</h1>
-                            <p>SGRT facility has provided valuable inputs for the formulation of
-                                new standards for processed glass by the Bureau of Indian Standards.</p>
+                            <!-- <p>SGRT facility has provided valuable inputs for the formulation of
+                                new standards for processed glass by the Bureau of Indian Standards.</p> -->
+                                <p>The Structural Glass Research and Testing (SGRT) Facility has become the prime center for testing and research on architectural glass.</p>
                             <div class="button">
                                 <a class="thm-btn yellow-bg" href="testing-facilities.html">Read More</a>
                                 <a class="thm-btn our-solution" href="https://www.glazingsociety.com/"
@@ -992,7 +993,7 @@
     <!--End recent event area-->
 
     <!--Start Brand area-->
-    <section class="brand-area">
+    <section class="brand-area" style="display: none;">
         <div class="container">
             <div class="sec-title">
                 <h1>Major Testing Done</h1>
