--- a/testing-facilities.html
+++ b/testing-facilities.html
@@ -179,7 +179,7 @@
                                     target="_blank">Apply For Testing</a>
                             </div>
                             <div class="button">
-                                <a class="thm-btn yellow-bg" href="contact.html">Enquire For Custom Testing</a>
+                                <a class="thm-btn yellow-bg" href="https://www.glazingsociety.com" target="_blank">Enquire For Custom Testing</a>
                             </div>
                         </div>
                         <!--End single sidebar item-->
